% Links to vignettes 20220723
\newcommand{\viglink}{\ifelse{html}{\out{<a href="../CHNOSZ/doc/#1.html"><strong>#1.Rmd</strong></a>}}{\bold{#1.Rmd}}}
% Heat capacity and standard Gibbs energy 20231115
\newcommand{\Cp}{\ifelse{latex}{\eqn{C_P}}{\ifelse{html}{\out{<I>C<sub>P</sub></I>}}{Cp}}}
\newcommand{\DG0}{\ifelse{latex}{\eqn{{\Delta}G^{\circ}}}{\ifelse{html}{\out{&Delta;<I>G</I>&deg;}}{ΔG°}}}

\section{Changes in CHNOSZ version 2.2.0-4 (2025-08-21)}{

    \itemize{

      \item \code{label.plot()} and \code{label.figure()} now handle
      logarithmic scales for x and y axes.

      \item Fix bug preventing \code{mosaic()} from being used to form \H2O.
      
      \item For IAPWS95 water model, add 0.1 bar (0.01 MPa) to values of Psat >
      1 bar computed from \code{WP02.auxiliary()} to prevent Born functions,
      which are calculated as finite difference derivatives, from exploding.

      \item Add stibnite (Sb\s{2}S\s{3}) from
      \href{https://doi.org/10.3133/b2131}{Robie and Hemingway (1995)}.

    }

}


\section{Changes in CHNOSZ version 2.2.0 (2025-06-20)}{

  \subsection{OBIGT DATABASE FORMAT}{
    \itemize{

      \item Mineral species whose \code{T} value is a Cp equation limit or
      phase transition temperature are indicated by \samp{CGL} or
      \samp{CGL_Ttr}, respectively, in \code{model}. At temperatures above the
      \code{T} limit, \code{subcrt()} extrapolates values and produces a
      warning for \samp{CGL} species or returns NA values for \samp{CGL_Ttr}
      species. The addition of \samp{CGL_Ttr} replaces the previous strategy of
      using signed values of \code{T}.

    }
  }

  \subsection{OBIGT DEFAULT DATA}{
    \itemize{

      \item Add tantalum species from
      \href{https://doi.org/10.1016/j.gca.2024.10.019}{Hu et al. (2024)}.

      \item Add germanium, indium, gallium, and cadmium minerals and aqueous
      species from the compilation of